@@ -1,3 +1,11 @@
+2004-04-24  Peter  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/Makefile.am:
+	* src/Makefile_insert:
+	  New generated file inkscape_version.h, to replace
+	  -DINKSCAPE_VERSION=\"$(VERSION)\".
+	* src/help.cpp: #include it.
+
 2004-04-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/sp-polygon.cpp:
